# Rufus

./: .gitignore  Cargo.toml  README.md
.devcontainer/: .devcontainer.json
.github/workflows/: release.yml
src/: cli.rs  gradescope.rs  main.rs
src/cli/: clap.rs  handlers.rs  mod.rs  utils.rs
src/gradescope/: loaders.rs  mod.rs  types.rs
src/rufus/: emission.rs  emission_group.rs  grouping.rs  mod.rs
